--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -7,13 +7,12 @@
     flex-wrap: wrap;
 
     .logo{
-        border: 1px solid red;
         font-family: 'Play', sans-serif;
         flex: 0 0 50%;
         @include flex(flex-start, center, row);
         h1{
             margin: 1rem;
-            font-size: 10rem;
+            font-size: 6rem;
         }
         img{
             flex: 0 0;
@@ -23,11 +22,9 @@
     }
     
     .actions-header{
-        border: 1px solid blue;
         flex: 0 1 50%;
         @include flex(flex-end, center, row);
         button{
-            border: 1px solid green;
             margin: 1rem;
         }
         
@@ -37,6 +34,24 @@
 
 
 @media screen and (max-width:950px){
+    .top-header{
+        .logo{
+            flex: 0 0 70%;
+            h1{
+                font-size:3rem;
+            }
+        }
+        .actions-header{
+            flex: 0 0 30%;
+        }
+    }
+
+    
+}
+
+
+
+@media screen and (max-width:500px){
     .top-header{
         .logo{
             flex: 0 0 70%;
