--- a/src/components/Search/Result.css
+++ b/src/components/Search/Result.css
@@ -1,7 +1,7 @@
 .search-results {
   margin-top: 5vh;
   width: 95%;
-  margin-left: auto;
+  margin-left: 5rem;
 }
 
 @media screen and (max-width: 768px) {
