--- a/src/components/ShowPage/ShowPage.scss
+++ b/src/components/ShowPage/ShowPage.scss
@@ -1,26 +1,18 @@
 @import "../../styles/globalvars";
 
+
 .show-page{
     min-height: 10vh;
     margin-top: 5vh;
-    flex-wrap: wrap;
     /* Rounded border */
     hr.rounded {
         border-top: 2px solid #bbb;
         border-radius: 5px;
     }
-    .show-page-title{
-        h1{
-            margin-left: auto;
-            margin-right: auto;
-            font-size: 2rem;
-        }
-        h3{
-            color: grey;
-            font-size: 1.5rem;
-        }
-    }
+    @include flex(space-between, center, row);
+    flex-wrap: wrap;
     .show-page-images{
+        flex: 0 0 40%;
         @include flex(space-between, center, row);
         img{
             margin-left: auto;
@@ -30,29 +22,102 @@
             object-fit: cover;
         }
     }
-    .show-page-description{
-        @include flex(space-between, center, row);
-        span{
-            margin-left: auto;
-            margin-right: auto;
-            font-size: 1.5rem;
+    .show-page-info{
+        flex: 0 0 60%;
+        .show-page-title{
+            h1{
+                margin-left: auto;
+                margin-right: auto;
+                font-size: 2rem;
+            }
+            h3{
+                color: grey;
+                font-size: 1.5rem;
+            }
+        }
+        .show-page-description{
+            @include flex(space-between, center, row);
+            span{
+                margin-left: auto;
+                margin-right: auto;
+                font-size: 1.5rem;
+            }
+        }
+        .show-page-keywords{
+            @include flex(space-between, center, row);
+            h2, ul{
+                margin-left: auto;
+                margin-right: auto;
+            }
+            
+
         }
     }
-    .show-page-keywords{
-        @include flex(space-between, center, row);
-        h2, ul{
-            margin-left: auto;
-            margin-right: auto;
+}
+
+
+
+@media screen and (max-width:750px) {
+
+
+    .show-page{
+        width: 100%;
+        @include flex(space-between, center, column);
+        flex-wrap: wrap;
+        /* Rounded border */
+        hr.rounded {
+            border-top: 2px solid #bbb;
+            border-radius: 5px;
+        }
+        .show-page-info{
+            flex: 0 0;
+            margin-top: 2vh;
+            .show-page-title{
+                text-align: center;
+                h1{
+                    margin-left: auto;
+                    margin-right: auto;
+                    font-size: 2rem;
+                }
+                h3{
+                    color: grey;
+                    font-size: 1.5rem;
+                }
+            }
+            .show-page-description{
+                    @include flex(space-between, center, row);
+                    span{
+                        margin-left: auto;
+                        margin-right: auto;
+                        font-size: 1.5rem;
+                    }
+                }
+            .show-page-keywords{
+                @include flex(space-between, center, row);
+                h2, ul{
+                    margin-left: auto;
+                    margin-right: auto;
+                }
+                
+    
+            }
+            
         }
         
-
+        .show-page-images{
+            flex: 0 0;
+            @include flex(space-between, center, row);
+            img{
+                margin-left: auto;
+                margin-right: auto;
+                width: 30rem;
+                height: 30rem;
+                object-fit: cover;
+            }
+        }
+       
     }
-}
 
-@media screen and (max-width:768px){
-    .show-page{
-        margin-left: 0;
-        width: 100%;
-    }
-}
+    
 
+}
